# npy_reader

./: .gitignore  README.md  npy_reader.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  python-push.yml
src/: __init__.py  npy_reader.py
src/npy_reader/: __init__.py  functions.py  npy_reader.py
