[metadata]
name = npy_reader
url = https://github.com/AstrophysicsAndPython/npy_reader
author = Astrophysics and Python, Syed Ali Mohsin Bukhari
author_email = astrophysicsandpython@gmail.com, syedali.b@outlook.com
license = MIT
license_file = LICENSE
description = A simple numpy (.npy) file reader

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
python_requires = >=3.7
packages = find: 
install_requires = 
    numpy >= 1.21.5

[options.packages.find]
where = src
