[metadata]
name = npy_reader
version = 1.0.1
url = https://github.com/AstrophysicsAndPython/npy_reader
author = Astrophysics and Python, Syed Ali Mohsin Bukhari
author_email = astrophysicsandpython@gmail.com, syedali.b@outlook.com
license = MIT
license_file = LICENSE
description = A simple tool to read and display the numpy (.npy) files.
long_description = file: README.md
long_description_content_type = "text/markdown"

# NOTE: any changes in the requirements must also be reflected in
#   - requirements.txt
#   - environment.yml
#   - install.rst

[options]
package_dir =
    = src

packages = find:
python_requires = >= 3.7

install_requires =
    numpy >= 1.21.5

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
